@@ -79,6 +79,10 @@ For ooo_to_html:
 http://ovh.dl.sourceforge.net/sourceforge/gnuwin32/unzip-5.51-1-bin.zip
 also binaries as for docbook_to_html
 
+For ooo_to_docbook:
+You need ooo2dbk.exe binary, that you can create from code located at
+svn co http://svn.nuxeo.org/pub/ooo2dbk
+README in ooo2dbk sources contains information how to compile it on win32.
 
 
 Documentation
